Fixed line spacing issue and improved the UX

--- a/src/style.css
+++ b/src/style.css
@@ -7,11 +7,6 @@ h1 {
   color: darkgreen;
 }
 
-form {
-  padding: 30px 30px 0;
-  margin-bottom: 10px;
-}
-
 footer {
   font-size: 12px;
   opacity: 60%;
@@ -29,6 +24,11 @@ a {
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.2);
 }
 
+.form-container {
+  padding: 30px 30px 0;
+  margin-bottom: 10px;
+}
+
 .form-input {
   padding: 12px;
   border: 1px solid darkgreen;
@@ -38,6 +38,16 @@ a {
   line-height: 20px;
   outline: none;
   color: darkgreen;
+}
+
+.example {
+  line-height: 1.5;
+  margin-top: 5px;
+  margin-bottom: 50px;
+  opacity: 0.6;
+  font-size: 12px;
+  text-align: left;
+  margin-left: 50px;
 }
 
 .submit-button {
@@ -63,3 +73,22 @@ a {
   text-align: left;
 }
 
+.hidden {
+  display: none;
+}
+
+.generating-timer {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
